# pyProjExample

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  run-pytest.yml
src/: cli.py  logger.py  logger_mylib.py  mult.py
tests/: mult_test.py
