[tool.poetry]
name = "pyProjExample"
version = "0.1.0"
description = ""
authors = ["Richard Bell <rcbell@eng.ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
pytest = "^7.2.1"
pre-commit = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
